...
            android:visibility="gone"
            android:textSize="@dimen/details_size"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_proposed_by_prompt"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_walk_name_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/walk_name"
            android:textSize="@dimen/details_size"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_proposed_by_display"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_walk_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/unspecified"
            android:visibility="gone"
            android:textSize="@dimen/details_size"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_walk_name_prompt"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_starting_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/starting_loc"
            android:textSize="@dimen/details_size"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_walk_name_display" />

        <TextView
            android:id="@+id/schedule_propose_tv_starting_loc_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/unspecified"
            android:text=""
            android:visibility="gone"
            android:textSize="@dimen/details_size"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_starting_loc"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_walk_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/date"
            android:textSize="@dimen/details_size"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_starting_loc_display" />

        <TextView
            android:id="@+id/schedule_propose_tv_walk_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/unspecified"
            android:visibility="gone"
...
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_walk_date_display">

        <Button
            android:id="@+id/schedule_propose_btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:drawableStart="@drawable/ic_check_green_24dp"
            android:text="@string/accept" />

        <Button
            android:id="@+id/schedule_propose_btn_decline_cant_come"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:textColor="@color/colorBlack"
            android:text="@string/decline_cant_come"
            android:textSize="12sp"
            android:drawableStart="@drawable/ic_event_busy_black_24dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/schedule_propose_btn_decline_not_interested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:padding="5dp"
            android:textColor="@color/colorBlack"
...
