...
    <string name="height_prompt">Please enter your height:</string>
    <string name="num_hint">0</string>
    <string name="feet_units">ft</string>
    <string name="inch_units">in</string>
    <string name="without_login">Continue without login</string>
    <string name="with_login">Go back to login</string>
    <string name="enter_gmail_address">Enter gmail address</string>
    <string name="enter_password">Enter unique password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="sign_up_tv">Don\'t have an account? Sign up here</string>
    <string name="login_tv">Already have an account? Log in here</string>

    <!--    In activity_home.xml-->
...
    <string name="increment_btn_text">+500</string>
    <string name="time_hint">hh:mm:ss</string>
    <string name="max_input_chars">8</string>
    <string name="enter_start_time">Enter Desired Start Time: </string>

    <!--    In content_save_route.xml-->
    <string name="title">Title: (this is REQUIRED) </string>
    <string name="name_route_hint">Name Route</string>
    <string name="starting_location">Starting Location:</string>
    <string name="location_det_hint">Location Details</string>
    <string name="loop">Loop</string>
    <string name="out_and_back">Out-and-back</string>
    <string name="flat_button">Flat</string>
...

    <!-- In activity_team.xml-->
    <string name="title_team_page">Your Walking Team</string>
    <string name="pending_invites">Pending&#10;Invitations</string>
    <string name="invite_team_member">Invite&#10;New Teammate</string>
    <string name="title_teammates_in_team">Teammates: </string>
    <string name="btn_title_scheduled_walks">Scheduled and Proposed Walks</string>
    <string name="text_no_teammates_in_team">No Teammates Yet :-(</string>
    <string name="status_description">Teammate Walk Decision Icon</string>

    <!-- In activity_invitations -->
    <string name="title_pending_invitations_page">Pending Invitations</string>
    <string name="btn_accept_team_invitation">Accept</string>
...
    <string name="title_activity_routes">My Routes</string>
    <string name="title_activity_invite_team_to_walk">Invite Team to Walk</string>

    <!--    Others-->
    <string name="routes">Routes</string>
    <string name="home">Home</string>
    <string name="team">Team</string>

    <!-- In ListviewAdapter.java -->
    <string name="fake_teammate_name">Samuel Jackson</string>
    <string name="fake_teammate_initials">SJ</string>

    <!-- In TeamRoutesActivity -->
...
